--- a/public/index.html
+++ b/public/index.html
@@ -1,46 +1,50 @@
 <html>
 
 <head>
-    <title>Express</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <title>水果物價查詢</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 
 <body>
-<h1>水果物價查詢</h1>
+<div class = "container">
+    <h1 class="display-6">水果物價查詢</h1><br/>
 
-<p>請選擇要查詢的水果</p>
-<select id="fruitSelect">
-    <option value="apple">蘋果</option>
-    <option value="banana">香蕉</option>
-    <option value="watermelon">西瓜</option>
-    <option value="pineapple">鳳梨</option>
-    <option value="mango">芒果</option>
-    <option value="grape">葡萄</option>
-</select>
+    <p class="lh-sm">請選擇要查詢的水果</p>
+    <select class="form-select" id="fruitSelect">
+        <option selected>請選擇水果</option>
+        <option value="apple">蘋果</option>
+        <option value="banana">香蕉</option>
+        <option value="watermelon">西瓜</option>
+        <option value="pineapple">鳳梨</option>
+        <option value="mango">芒果</option>
+        <option value="grape">葡萄</option>
+    </select>
+    <br>
+    <p class="lh-sm">請選擇要查詢的年份</p>
+    <select class="form-select" id="yearSelect">
+        <option selected>請選擇年份</option>
+        <option value="108">108</option>
+        <option value="109">109</option>
+        <option value="110">110</option>
+        <option value="111">111</option>
+        <option value="112">112</option>
+        <option value="113">113</option>
+    </select>
 
-<p>請選擇要查詢的年份</p>
-<select id="yearSelect">
-    <option value="108">108</option>
-    <option value="109">109</option>
-    <option value="110">110</option>
-    <option value="111">111</option>
-    <option value="112">112</option>
-    <option value="113">113</option>
-</select>
-
-<br><br>
-<button id="queryButton">查詢</button>
-<table id="resultsTable">
-    <thead>
-    <tr>
-        <th>日期</th>
-        <th>平均價(元/公斤)</th>
-    </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table>
-
+    <br><br>
+    <button id="queryButton" class="btn btn-primary">查詢</button>
+    <p></p>
+    <table id="resultsTable" class="table table-bordered">
+        <thead>
+        <tr>
+            <th>日期</th>
+            <th>平均價(元/公斤)</th>
+        </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</div>
 <script src="/javascripts/form.js"></script>
 </body>
 
